# FHE-Password-Breach-Detection

./: .gitignore  CMakeLists.txt  README.md  main.cpp  server.cpp  server.h  utils.cpp  utils.h  제목 없는 다이어그램.drawio
client/: client.cpp  client.h
methods/: fermat.cpp  fermat.h  subtraction.cpp  subtraction.h
server/: server.cpp  server.h
utils/: utils.cpp  utils.h
web/: app.py
web/templates/: index.html
